// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow rendering 1`] = `
<div
  className="flex-100 layout-row"
>
  <div
    className="flex-100 layout-row layout-align-center"
  >
    <div
      className="quantity layout-row flex-100 false false layout-wrap layout-align-start-center"
    >
      <p
        className="flex-100 layout-row layout-align-center-start"
        style={
          Object {
            "marginBottom": "25px",
          }
        }
      >
        Quantity
      </p>
      <div
        className="flex-100 layout-row"
      >
        <ValidatedInput
          errorStyles={
            Object {
              "bottom": "unset",
              "fontSize": "10px",
              "top": "-14px",
            }
          }
          firstRenderInputs={true}
          min="1"
          name="1-quantity"
          nextStageAttempt={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Quantity"
          step="any"
          type="number"
          validationErrors={
            Object {
              "nonNegative": "Must be greater than 0",
            }
          }
          validations={
            Object {
              "nonNegative": [Function],
            }
          }
          wrapperClassName="flex-100"
        />
      </div>
      <hr
        className="flex-35"
      />
    </div>
  </div>
</div>
`;

exports[`with cargoItem.quantity 1`] = `
<div
  className="flex-100 layout-row"
>
  <div
    className="flex-100 layout-row layout-align-center"
  >
    <div
      className="quantity layout-row flex-100 false false layout-wrap layout-align-start-center"
    >
      <p
        className="flex-100 layout-row layout-align-center-start"
        style={
          Object {
            "marginBottom": "25px",
          }
        }
      >
        Quantity
      </p>
      <div
        className="flex-100 layout-row"
      >
        <ValidatedInput
          errorStyles={
            Object {
              "bottom": "unset",
              "fontSize": "10px",
              "top": "-14px",
            }
          }
          firstRenderInputs={true}
          min="1"
          name="1-quantity"
          nextStageAttempt={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Quantity"
          step="any"
          type="number"
          validationErrors={
            Object {
              "nonNegative": "Must be greater than 0",
            }
          }
          validations={
            Object {
              "nonNegative": [Function],
            }
          }
          value={3}
          wrapperClassName="flex-100"
        />
      </div>
      <hr
        className="flex-35"
      />
    </div>
  </div>
</div>
`;
